loopfor.LoopFor.scala.error
Compilation error:
LoopFor:3: error: not found: value pickupbaggle
    pickupbaggle()
    ^