loopfor.LoopFor.scala.code
for (i <- 0 to 5) {
  if (isOverBaggle()) {
    pickupbaggle()
  }
  forward()
}
for (i <- 0 to 5) {
  backward()
}
dropBaggle()